# adp_ros

./: README.md
common/reference_point_tracker/: CMakeLists.txt  package.xml
common/reference_point_tracker/include/adp/reference_point_tracker/: reference_point_tracker.h
common/reference_point_tracker/src/: reference_point_tracker.cpp  reference_point_tracker_vis.cpp
common/reference_point_tracker/test/: reference_point_tracker_test.cpp
common/trajectory/: CMakeLists.txt  package.xml
common/trajectory/include/adp/trajectory/: path.h  path_point.h
common/trajectory/src/: path.cpp  path_point.cpp
common/trajectory/test/: trajectory_test.cpp
common/trajectory/test/data/: carla_waypoints_sample.bag
controller/controller/: CMakeLists.txt  package.xml
controller/controller/include/adp/controller/: controller.h  controller_ros.h
controller/controller/src/: controller.cpp  controller_ros.cpp  main.cpp
controller/controller/test/: controller_test.cpp
controller/controller/test/data/: demo_lane_follow_with_const_velocity.bag
controller/pure_pursuit/: CMakeLists.txt  package.xml
controller/pure_pursuit/include/adp/pure_pursuit/: pure_pursuit.h
controller/pure_pursuit/src/: pure_pursuit.cpp
controller/pure_pursuit/test/: pure_pursuit_test.cpp
demo/: CMakeLists.txt  package.xml
demo/config/: demo.rviz
demo/launch/: demo_with_scenario.launch
