<package format="2">
  <name>reference_point_tracker</name>
  <version>0.1</version>
  <description>
     Reference Point Tracker package
  </description>
  <maintainer email="jiwung@gmail.com">Jiwung Choi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>trajectory</depend>
  <depend>visualization_msgs</depend>
</package>
