<package format="2">
  <name>trajectory</name>
  <version>0.1</version>
  <description>
     Trajectory package
  </description>
  <maintainer email="jiwung@gmail.com">Jiwung Choi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>eigen_conversions</depend>
  <test_depend>rosbag</test_depend>
</package>
