<package format="2">
  <name>controller</name>
  <version>0.1</version>
  <description>
    The Controller package
  </description>
  <maintainer email="jiwung@gmail.com">Jiwung Choi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen_conversions</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory</depend>
  <depend>reference_point_tracker</depend>
  <depend>pure_pursuit</depend>

  <test_depend>rosbag</test_depend>
</package>
